--- a/actioncategory.html
+++ b/actioncategory.html
@@ -5,19 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./actioncategory.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 </head>
 <body>
-    
-    <div class="clock">
-        <img src="./alarm.png" alt="알람">
+    <div class="home">
+        <img src="./home.png" alt="홈으로">
     </div>
-
     <nav class="top">
-        <h1 class="title">레크레이션 게임</h1>
+        <h1 class="title">행동 카테고리</h1>
     </nav>
 
     <section>
@@ -25,11 +23,12 @@
     </section>
 
     <article class="btn">
-        <div class="quizbtn"><p class="quizletter"><a href="./quizcategory.html">퀴즈</a></p></div>
-        <div class="actionbtn"><p class="actionletter"><a href="./actioncategory.html">행동</a></p></div>
+        <div class="oneofactionbtn"><p class="title1">일심동체</p></div>
+        <div class="bodybtn"><p class="title2">몸으로<br>말해요</p></div>
+        <div class="nonstopspeakbtn"><p class="title2">줄줄이<br>말하기</p></div>
+        <div class="nonstopwritebtn"><p class="title2">이어<br>그리기</p></div>
     </article>
 
-    
+   
 </body>
 </html>
-
