--- a/quizcategory.html
+++ b/quizcategory.html
@@ -11,12 +11,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="home">
-        <img src="./home.png" alt="홈으로">
-    </div>
+    
 
     <nav class="top">
         <h1 class="title">퀴즈 카테고리</h1>
+
+        <div class="home">
+            <a href="./main.html">
+            <img class='home' src="./home.png" alt="홈으로">
+            </a>
+        </div>
     </nav>
     
     <section>
