--- a/main.html
+++ b/main.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     
-    <div class="clock">
-        <img src="./alarm.png" alt="알람">
-    </div>
-
     <nav class="top">
         <h1 class="title">레크레이션 게임</h1>
+
+        <div class="clock">
+            <img class="alarm" src="./alarm.png" alt="알람">
+        </div>
     </nav>
 
     <section>
