--- a/main.html
+++ b/main.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
-    <link rel="stylesheet" href="./main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-</head>
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Recreation Game</title>
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jua&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <nav class="top">
-        <h1 class="title">레크레이션 게임</h1>
+      <h1 class="title">레크레이션 게임</h1>
 
-        <div class="clock">
-            <img class="alarm" src="./alarm.png" alt="알람">
-        </div>
+      <div class="clock">
+        <img class="alarm" src="./alarm.png" alt="알람" />
+      </div>
     </nav>
 
     <section>
-    <hr class="line" color="black" size="5">
+      <hr class="line" color="black" size="5" />
     </section>
 
-    <article class="btn">
-        <div class="quizbtn"><p class="quizletter"><a href="./quizcategory.html">퀴즈</a></p></div>
-        <div class="actionbtn"><p class="actionletter"><a href="./actioncategory.html">행동</a></p></div>
-    </article>
+    <div class="btn">
+      <div class="quizbtn">
+        <p class="quizletter"><a href="./quizcategory.html">퀴즈</a></p>
+      </div>
+      <div class="actionbtn">
+        <p class="actionletter"><a href="./actioncategory.html">행동</a></p>
+      </div>
+    </div>
 
-    
-</body>
+    <div class="question_img">
+      <img class="question" , src="./question.png" />
+    </div>
+  </body>
 </html>
-
