--- a/actioncategory.html
+++ b/actioncategory.html
@@ -28,10 +28,10 @@
     </section>
 
     <article class="btn">
-        <div class="oneofactionbtn"><p class="title1">일심동체</p></div>
-        <div class="bodybtn"><p class="title2">몸으로<br>말해요</p></div>
-        <div class="nonstopspeakbtn"><p class="title3">줄줄이<br>말하기</p></div>
-        <div class="nonstopwritebtn"><p class="title4">이어<br>그리기</p></div>
+        <div class="oneofactionbtn"><p class="title1"><a href="./act1question.html">일심동체</p></a></div>
+        <div class="bodybtn"><p class="title2"><a href="./act2question.html">몸으로<br>말해요</p></a></div>
+        <div class="nonstopspeakbtn"><p class="title3"><a href="./act3question.html">줄줄이<br>말하기</p></a></div>
+        <div class="nonstopwritebtn"><p class="title4"><a href="./act4question.html">이어<br>그리기</p></a></div>
     </article>
 
    
