--- a/commonsense.html
+++ b/commonsense.html
@@ -30,7 +30,7 @@
        
         <div class="container">
             <div class="group">
-                <div><a href="./act1question.html"><button class="category">정답</button></div></a>
+                <div><a href="./commonsense_answer.html"><button class="category">정답</button></div></a>
             </div>
         </div>
     </div>
