--- a/main.html
+++ b/main.html
@@ -19,7 +19,9 @@
       <h1 class="title">레크레이션 게임</h1>
 
       <div class="clock">
-        <img class="alarm" src="./alarm.png" alt="알람" />
+        <a href="./main_timer_setting.html">
+          <img class="alarm" src="./alarm.png" alt="알람" />
+        </a>
       </div>
     </nav>
 
