--- a/actioncategory.html
+++ b/actioncategory.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main</title>
-    <link rel="stylesheet" href="./actioncategory.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="./actioncategory.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jua&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <nav class="top">
-        <h1 class="title">행동 카테고리</h1>
+      <h1 class="title">행동 카테고리</h1>
 
-        <div class="home">
-            <a href="./main.html">
-            <img class='home' src="./home.png" alt="홈으로">
-            </a>
-        </div>
-        
+      <div class="home">
+        <a href="./main.html">
+          <img class="home" src="./home.png" alt="홈으로" />
+        </a>
+      </div>
     </nav>
 
     <section>
-    <hr class="line" color="black" size="5">
+      <hr class="line" color="black" size="5" />
     </section>
 
     <article class="btn">
-        <div class="oneofactionbtn"><p class="title1"><a href="./act1question.html">일심동체</p></a></div>
-        <div class="bodybtn"><p class="title2"><a href="./act2question.html">몸으로<br>말해요</p></a></div>
-        <div class="nonstopspeakbtn"><p class="title3"><a href="./act3question.html">줄줄이<br>말하기</p></a></div>
-        <div class="nonstopwritebtn"><p class="title4"><a href="./act4question.html">이어<br>그리기</p></a></div>
+      <div class="oneofactionbtn">
+        <a href="./act1question.html">일심동체</a>
+      </div>
+      <div class="bodybtn">
+        <a href="./act2question.html">몸으로<br />말해요</a>
+      </div>
+      <div class="nonstopspeakbtn">
+        <a href="./act3question.html">줄줄이<br />말하기</a>
+      </div>
+      <div class="nonstopwritebtn">
+        <a href="./act4question.html">이어<br />그리기</a>
+      </div>
     </article>
-
-   
-</body>
+  </body>
 </html>
