--- a/quizcategory.html
+++ b/quizcategory.html
@@ -30,22 +30,12 @@
 
     <article class="btn">
       <div class="fourquizbtn">
-        <p class="title1">
-          <a href="./fourquiz.html">네글자<br />이어말하기</a>
-        </p>
+        <a href="./quizTimerSet.html">네글자<br />이어말하기</a>
       </div>
-      <div class="commonsensebtn">
-        <p class="title2"><a href="./commonsense.html">상식</a></p>
-      </div>
-      <div class="oxbtn">
-        <p class="title4"><a href="./ox.html">OX</a></p>
-      </div>
-      <div class="nonesensebtn">
-        <p class="title3"><a href="./nonsense.html">넌센스</a></p>
-      </div>
-      <div class="flagbtn">
-        <p class="title2"><a href="./flag.html">국기</a></p>
-      </div>
+      <div class="commonsensebtn"><a href="./quizTimerSet.html">상식</a></div>
+      <div class="oxbtn"><a href="./quizTimerSet.html">OX</a></div>
+      <div class="nonesensebtn"><a href="./quizTimerSet.html">넌센스</a></div>
+      <div class="flagbtn"><a href="./quizTimerSet.html">국기</a></div>
     </article>
   </body>
 </html>
