--- a/main.html
+++ b/main.html
@@ -30,12 +30,8 @@
     </section>
 
     <div class="btn">
-      <div class="quizbtn">
-        <p class="quizletter"><a href="./quizcategory.html">퀴즈</a></p>
-      </div>
-      <div class="actionbtn">
-        <p class="actionletter"><a href="./actioncategory.html">행동</a></p>
-      </div>
+      <div class="quizbtn"><a href="./quizcategory.html">퀴즈</a></div>
+      <div class="actionbtn"><a href="./actioncategory.html">행동</a></div>
     </div>
 
     <div class="question">
