--- a/actioncategory.html
+++ b/actioncategory.html
@@ -36,7 +36,7 @@
         <a href="./act2question.html">몸으로<br />말해요</a>
       </div>
       <div class="nonstopspeakbtn">
-        <a href="./act3question.html">줄줄이<br />말하기</a>
+        <a href="./act3question.html">줄줄이<br />말해요</a>
       </div>
       <div class="nonstopwritebtn">
         <a href="./act4question.html">이어<br />그리기</a>
