--- a/actioncategory.html
+++ b/actioncategory.html
@@ -30,16 +30,17 @@
 
     <article class="btn">
       <div class="oneofactionbtn">
-        <a href="./act1question.html">일심동체</a>
+        <a href="./action_1.html">일심동체</a>
       </div>
       <div class="bodybtn">
-        <a href="./act2question.html">몸으로<br />말해요</a>
+        <a href="./action_2.html">몸으로<br />말해요</a>
       </div>
       <div class="nonstopspeakbtn">
-        <a href="./act3question.html">줄줄이<br />말해요</a>
+        <a href="./">줄줄이<br />말해요</a>
+        <!-- 이 부분은 세부 카테고리 페이지 만들 필요가 없대요~ 그래서 버튼 누르면 바로 문제 나오는 페이지로 넘어가게 링크 연결 부탁드립니다.-->
       </div>
       <div class="nonstopwritebtn">
-        <a href="./act4question.html">이어<br />그리기</a>
+        <a href="./action_3.html">이어<br />그리기</a>
       </div>
     </article>
   </body>
